[Safe CPP] Address Warnings in WritableStream https://bugs.webkit.org/show_bug.cgi?id=293999 rdar://problem/152548667

Reviewed by Chris Dumez.

Address safe cpp warnings in WritableStream.

* Source/WebCore/Modules/streams/WritableStream.h:
* Source/WebCore/SaferCPPExpectations/UncountedCallArgsCheckerExpectations:

Canonical link: https://commits.webkit.org/295808@main